testsuite/gsksl/errors/no-struct-in-variables-in-vertex-shader.vert
in struct {int x; int y; } s;

void
main ()
{
}
